# AIOS

./: .gitmodules  README.md
llm-server/: server.py
shell-app/: settings.gradle.kts
shell-app/app/: build.gradle.kts
shell-app/app/src/main/: AndroidManifest.xml
shell-app/app/src/main/cpp/: CMakeLists.txt  aios_llm_jni.cpp
shell-app/app/src/main/java/dev/aios/shell/: MainActivity.kt
shell-app/app/src/main/java/dev/aios/shell/ai/: AIConfig.kt  AIManager.kt  AIResponse.kt  ExternalAPIEngine.kt  LLMBackend.kt  LlamaEngine.kt  RemoteServerEngine.kt  SystemPrompt.kt
shell-app/app/src/main/java/dev/aios/shell/broker/: IntentParser.kt  ToolBroker.kt
shell-app/app/src/main/java/dev/aios/shell/planner/: TaskPlanner.kt
shell-app/app/src/main/java/dev/aios/shell/policy/: PolicyEngine.kt
shell-app/app/src/main/java/dev/aios/shell/tools/: SystemToolExecutor.kt
shell-app/app/src/main/java/dev/aios/shell/ui/: AIOSApp.kt  SettingsScreen.kt
shell-app/app/src/main/java/dev/aios/shell/ui/theme/: Theme.kt
shell-app/app/src/main/java/dev/aios/shell/viewmodel/: ShellViewModel.kt
shell-app/app/src/main/res/values/: strings.xml  themes.xml
